SpeedCrunch post 0.7
---------------------
New features:
 support for different bases: hex, octal and binary
 postfix factorial operator (!)
 support inserting important physics constants
 history, functions, variables, constants in docked/floated windows
 added engineering notation
 "tip of the day"
 option to hide from taskbar and minimize to system tray

New functions:
 MIN: get the minimum
 MAX: get the maximum
 SUM: sum of all numbers
 PRODUCT: product of all numbers
 AVERAGE: average or mean
 GEOMEAN: geometrical mean
 SIGN: signum
 DEGREES: convert radian to degree
 RADIANS: convert degree to radian
 LG: base-2 logarithm
 CBRT: cube root
 TRUNC: truncate digits
 FLOOR: floor
 CEIL: ceiling
 ROUND: round number
 NCR: combination
 NPR: permutation
 GCD: greatest common divisor
 SEC: secant
 CSC: cosecant
 COT: cotangent
 BINOMPMF: binomial probability mass function
 BINOMCDF: binomial cumulative distribution function
 BINOMMEAN: binomial distribution mean
 BINOMVAR: binomial distribution variance
 HYPERPMF: hypergeometric probability mass function
 HYPERCDF: hypergeometric cumulative distribution function
 HYPERMEAN: hypergeometric distribution mean
 HYPERVAR: hypergeometric distribution variance
 POIPMF: poissonian probability mass function
 POICDF: poissonian cumulative distribution function
 POIMEAN: poissonian distribution mean
 POIVAR: poissonian distribution variance

Improvements and bug fixes:
 fixed accuracy problem when calculating 10^x where x is integer
 variable names are now case sensitive in and between sessions
 shortcut Ctrl+Q to quit (ubuntu bug#102734)
 shortcut key F6 to focus and select input
 shortcut key Esc to clear the input
 improved (and non-intrusive) autocalc tip
 reserved variable names are now case sensitive "pi" and "ans"
 color for error messages can be customized
 fixed exp(x) when x is large
 improved error system and messages, introduced Px notation to refer parameters
 fixed issue #33: exponential notation misnamed