@@ -1094,6 +1094,30 @@ char* HMath::format( const HNumber& hn, char format, int prec )
   return formatGeneral( hn, prec );
 }
 
+HNumber HMath::phi()
+{
+  return HNumber("1.61803398874989484820458683436563811772030917980576"
+                   "28621354486227052604628189024497072072041893911374"
+                   "84754088075386891752126633862223536931793180060766"
+                   "72635443338908659593958290563832266131992829026788"
+                   "06752087668925017116962070322210432162695486262963"
+                   "13614438149758701220340805887954454749246185695364"
+                   "86444924104432077134494704956584678850987433944221"
+                   "25448770664780915884607499887124007652170575179788"
+                   "34166256249407589069704000281210427621771117778053"
+                   "15317141011704666599146697987317613560067087480710"
+                   "13179523689427521948435305678300228785699782977834"
+                   "78458782289110976250030269615617002504643382437764"
+                   "86102838312683303724292675263116533924731671112115"
+                   "88186385133162038400522216579128667529465490681131"
+                   "71599343235973494985090409476213222981017261070596"
+                   "11645629909816290555208524790352406020172799747175"
+                   "34277759277862561943208275051312181562855122248093"
+                   "94712341451702237358057727861600868838295230459264"
+                   "78780178899219902707769038953219681986151437803149"
+                   "97411069260886742962267575605231727775203536139362");
+}
+
 HNumber HMath::pi()
 {
   return HNumber("3.14159265358979323846264338327950288419716939937510"
